--- a/fuzhou1.html
+++ b/fuzhou1.html
@@ -44,31 +44,38 @@
 
   <body>
     <div id="canvasposition"></div>
-    <canvas id="mycanvas" width="1730" height="910" class="FJMap"></canvas>
+    <canvas id="mycanvas" width="1730" height="910" class="FJMap"> </canvas>
     <script type="text/javascript">
       var arr = [
         // 福州
         {
-          x: 1033,
-          y: 420,
+          x: 1200,
+          y: 600,
           radius: 8,
-          content: "单位1",
+          content: "区域1",
           color: "red",
         },
         // 莆田
         {
           x: 979,
-          y: 600,
+          y: 680,
           radius: 8,
-          content: "单位2",
+          content: "区域2",
           color: "red",
         },
         // 厦门
         {
-          x: 814,
+          x: 100,
           y: 730,
           radius: 8,
-          content: "单位3",
+          content: "区域3",
+          color: "red",
+        },
+        {
+          x: 350,
+          y: 730,
+          radius: 8,
+          content: "区域4",
           color: "red",
         },
       ];
@@ -77,7 +84,7 @@
       var canvasposition = document.getElementById("canvasposition");
       var ctx = mycanvas.getContext("2d");
       var img = new Image();
-      img.src = "./img/fuzhou.png";
+      img.src = "./img/fuzhou1_small.jpg";
       var returnbutton = new Image();
       returnbutton.src = "./img/return.png";
 
@@ -101,7 +108,7 @@
             p.x <= arr[0].x + radius
           ) {
             // console.log('福州', p)
-            window.location = "/fuzhou1.html";
+            window.location = "/fac1.html";
           }
           if (
             p.y >= arr[1].y - radius &&
@@ -109,7 +116,8 @@
             p.x >= arr[1].x - radius &&
             p.x <= arr[1].x + radius
           ) {
-            window.location = "/fuzhou1.html";
+            // console.log('莆田', p)
+            window.location = "/fac2.html";
           }
           if (
             p.y >= arr[2].y - radius &&
@@ -117,11 +125,32 @@
             p.x >= arr[2].x - radius &&
             p.x <= arr[2].x + radius
           ) {
-            window.location = "/fuzhou1.html";
+            // console.log('厦门', p)
+            window.location = "/fac3.html";
+          }
+          if (
+            p.y >= arr[3].y - radius &&
+            p.y <= arr[3].y + radius &&
+            p.x >= arr[3].x - radius &&
+            p.x <= arr[3].x + radius
+          ) {
+            // console.log('厦门', p)
+            window.location = "/fac4.html";
           }
           if (p.y >= 20 && p.y <= 60 && p.x >= 50 && p.x <= 130) {
-
-            window.location = "/index.html";
+            // console.log(window.location.href);
+            let fuzhoucode = window.location.href.indexOf("fuzhou");
+            let putiancode = window.location.href.indexOf("putian");
+            let xiamencode = window.location.href.indexOf("xiamen");
+            if (fuzhoucode != -1) {
+              window.location.href = "./fuzhou.html";
+            }
+            if (putiancode != -1) {
+              window.location.href = "./putian.html";
+            }
+            if (xiamencode != -1) {
+              window.location.href = "./xiamen.html";
+            }
           }
         },
         false
@@ -151,6 +180,13 @@
             p.y <= arr[2].y + radius &&
             p.x >= arr[2].x - radius &&
             p.x <= arr[2].x + radius
+          ) {
+            this.style.cursor = "pointer";
+          } else if (
+            p.y >= arr[3].y - radius &&
+            p.y <= arr[3].y + radius &&
+            p.x >= arr[3].x - radius &&
+            p.x <= arr[3].x + radius
           ) {
             this.style.cursor = "pointer";
           } else if (p.y >= 20 && p.y <= 60 && p.x >= 50 && p.x <= 130) {
@@ -183,6 +219,18 @@
       function draw() {
         // var who = [];
         // ctx.clearRect(0, 0, mycanvas.width, mycanvas.height);
+        arr.forEach(function (v, i) {
+          ctx.beginPath();
+          ctx.arc(v.x, v.y, v.radius, 0, Math.PI * 2);
+          ctx.fillStyle = v.color;
+          ctx.fill();
+          // ctx.fillStyle = '#000';
+          ctx.font = "bold 20px Arial";
+          ctx.fillText(v.content, v.x - 20, v.y - 20);
+          ctx.stroke();
+        });
+      }
+      function drawback() {
         arr.forEach(function (v, i) {
           ctx.beginPath();
           ctx.arc(v.x, v.y, v.radius, 0, Math.PI * 2);
