--- a/putian1.html
+++ b/putian1.html
@@ -44,31 +44,31 @@
 
   <body>
     <div id="canvasposition"></div>
-    <canvas id="mycanvas" width="1730" height="910" class="FJMap"></canvas>
+    <canvas id="mycanvas" width="1730" height="910" class="FJMap"> </canvas>
     <script type="text/javascript">
       var arr = [
         // 福州
         {
-          x: 1033,
-          y: 420,
+          x: 1200,
+          y: 600,
           radius: 8,
-          content: "单位1",
+          content: "工厂1",
           color: "red",
         },
         // 莆田
         {
           x: 979,
-          y: 600,
+          y: 680,
           radius: 8,
-          content: "单位2",
+          content: "工厂2",
           color: "red",
         },
         // 厦门
         {
-          x: 814,
+          x: 100,
           y: 730,
           radius: 8,
-          content: "单位3",
+          content: "工厂3",
           color: "red",
         },
       ];
@@ -77,7 +77,7 @@
       var canvasposition = document.getElementById("canvasposition");
       var ctx = mycanvas.getContext("2d");
       var img = new Image();
-      img.src = "./img/fuzhou.png";
+      img.src = "./img/fuzhou1_small.jpg";
       var returnbutton = new Image();
       returnbutton.src = "./img/return.png";
 
@@ -101,7 +101,7 @@
             p.x <= arr[0].x + radius
           ) {
             // console.log('福州', p)
-            window.location = "/fuzhou1.html";
+            window.location = "/fac1.html";
           }
           if (
             p.y >= arr[1].y - radius &&
@@ -109,7 +109,8 @@
             p.x >= arr[1].x - radius &&
             p.x <= arr[1].x + radius
           ) {
-            window.location = "/fuzhou1.html";
+            // console.log('莆田', p)
+            window.location = "/fac1.html";
           }
           if (
             p.y >= arr[2].y - radius &&
@@ -117,11 +118,23 @@
             p.x >= arr[2].x - radius &&
             p.x <= arr[2].x + radius
           ) {
-            window.location = "/fuzhou1.html";
+            // console.log('厦门', p)
+            window.location = "/fac1.html";
           }
           if (p.y >= 20 && p.y <= 60 && p.x >= 50 && p.x <= 130) {
-
-            window.location = "/index.html";
+            // console.log(window.location.href);
+            let fuzhoucode = window.location.href.indexOf('fuzhou');
+            let putiancode = window.location.href.indexOf('putian');
+            let xiamencode = window.location.href.indexOf('xiamen');
+            if (fuzhoucode != -1) {
+              window.location.href = './fuzhou.html'
+            }
+            if (putiancode != -1) {
+              window.location.href = './putian.html'
+            }
+            if (xiamencode != -1) {
+              window.location.href = './xiamen.html'
+            }
           }
         },
         false
@@ -183,6 +196,18 @@
       function draw() {
         // var who = [];
         // ctx.clearRect(0, 0, mycanvas.width, mycanvas.height);
+        arr.forEach(function (v, i) {
+          ctx.beginPath();
+          ctx.arc(v.x, v.y, v.radius, 0, Math.PI * 2);
+          ctx.fillStyle = v.color;
+          ctx.fill();
+          // ctx.fillStyle = '#000';
+          ctx.font = "bold 20px Arial";
+          ctx.fillText(v.content, v.x - 20, v.y - 20);
+          ctx.stroke();
+        });
+      }
+      function drawback() {
         arr.forEach(function (v, i) {
           ctx.beginPath();
           ctx.arc(v.x, v.y, v.radius, 0, Math.PI * 2);
